--- a/packages/react-ui/src/components/Shell/thread.scss
+++ b/packages/react-ui/src/components/Shell/thread.scss
@@ -69,7 +69,7 @@
   scrollbar-color: cssUtils.$highlight-strong transparent;
 
   &::-webkit-scrollbar {
-    width: 6px;
+    width: cssUtils.$space-xs;
   }
 
   &::-webkit-scrollbar-track {
@@ -154,12 +154,31 @@ $center-align-spacing: calc(32px + cssUtils.$space-s);
   overflow: auto;
   padding: cssUtils.$space-m $center-align-spacing cssUtils.$space-xl;
   scroll-padding-top: cssUtils.$space-2xl;
+  scrollbar-width: thin;
+  scrollbar-color: cssUtils.$border-default transparent;
+
+  &::-webkit-scrollbar {
+    width: cssUtils.$space-xs;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: cssUtils.$border-default;
+    border-radius: calc(cssUtils.$radius-2xs + cssUtils.$space-3xs);
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: cssUtils.$text-neutral-secondary;
+  }
 
   scrollbar-width: thin;
   scrollbar-color: cssUtils.$highlight-strong transparent;
 
   &::-webkit-scrollbar {
-    width: 6px;
+    width: cssUtils.$space-xs;
   }
 
   &::-webkit-scrollbar-track {
