--- a/packages/react-ui/src/components/Shell/threadlist.scss
+++ b/packages/react-ui/src/components/Shell/threadlist.scss
@@ -6,6 +6,25 @@
   gap: cssUtils.$space-3xs;
   overflow: auto;
   margin-top: cssUtils.$space-m;
+  scrollbar-width: thin;
+  scrollbar-color: cssUtils.$border-default transparent;
+
+  &::-webkit-scrollbar {
+    width: cssUtils.$space-xs;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: cssUtils.$border-default;
+    border-radius: calc(cssUtils.$radius-2xs + cssUtils.$space-3xs);
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: cssUtils.$text-neutral-secondary;
+  }
 }
 
 .openui-shell-thread-list-group {
